One update statement per chunk, halving on failure, references per chunk (D-294)
Review round 1 on #365:

- Employee and salary UPDATEs were batched per column set, and a sheet's
  empty cell means "leave it alone", so real rows have many shapes: 500
  rows filling random subsets cost 485 statements against 22 for uniform
  rows. Each column is now col = IF(?, ?, col): one statement per chunk,
  values bound as before, a kept column assigned itself (no change, so
  updated_at moves only with a value); password_hash only when a password
  is present. The new heterogeneous test checks every row's stored values
  against the per-row path's.
- Writes run in sheet order within one batch, so a number one row gives
  up is released before a later row claims it; grouping by shape wrote a
  claim first and hit the phone's unique key.
- A failed chunk is halved rather than replayed row by row: one refused
  row among 500 cost 2,015 statements, now 65.
- Shifts, department links, departments, job titles and phone holders are
  re-read for each chunk just before it is validated, so a reference
  retired or a number taken mid-sheet is seen by the next chunk.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LdTzz3nXMUDe8JLFSFskEJ